Update env for arch.
* Added "at" and "signal-desktop" packages and alphabetized archpkgs
* fdfind -> fd
* Updated kitty font config
    * Now relying on nerd-fonts-jetbrains-mono AUR package to install
      jetbrains nerd font, though for whatever reason the font family is
      different with this method compared to getnf
* Updated startpage font to jetbrains mono nerd font
* Updated open tool and ran it through shellcheck
    * Added some TODOs for future work to improve it
* Updated update tool

--- a/startpage/index.css
+++ b/startpage/index.css
@@ -8,7 +8,7 @@
 html, body {
   background: var(--color-bg);
   color: var(--color-fg);
-  font-family: "Ubuntu Mono";
+  font-family: "JetBrainsMono Nerd Font";
   font-weight: 300;
   height: 100%;
   width: 100%;
